# f1-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  railway.json
docs/: PRD.md  implementation_plan.mdc
src/f1bot/: __init__.py  config.py  logging.py  main.py
src/f1bot/bot/: app.py
src/f1bot/bot/handlers/: __init__.py  admin.py  bingo.py  language.py  menu.py  start.py
src/f1bot/domain/: models.py
src/f1bot/jobs/: post_race.py  pre_race.py  scheduler.py
src/f1bot/services/: bingo.py  calendar.py  i18n.py  llm.py  news.py
src/f1bot/storage/: db.py  repositories.py
